--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,7 @@ tasks.withType(Test) {
     }
 }
 
-tasks.register('remote_test', Test) {
+tasks.register('hello_test', Test) {
     useJUnitPlatform {
         includeTags("remote")
     }
